--- a/project/crm_app/templates/crm_app/documents.html
+++ b/project/crm_app/templates/crm_app/documents.html
@@ -38,8 +38,9 @@
         <p>---no file---</p>
         {% endif %}
     </ul>
+<p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+    {% endfor %}<hr>
 
-    {% endfor %}
 
 
 <h2>Загрузить новый документ</h2>
@@ -51,6 +52,9 @@
         </p>
         <p><input type="submit" value="загрузить файл" /></p>
     </form>
+
+
+
 
 </div>
 {%endblock content%}
