--- a/project/crm_app/templates/crm_app/clients.html
+++ b/project/crm_app/templates/crm_app/clients.html
@@ -87,6 +87,7 @@
     <li>{{c.address}} </li>
     <li>{{c.created}} </li>
     <li>{{c.updated}} </li>
+         <li>Постоянный клиент: {{c.client_status}}</li>
 <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 
