--- a/project/crm_app/templates/crm_app/document.html
+++ b/project/crm_app/templates/crm_app/document.html
@@ -31,8 +31,9 @@
 
 
 <td>
-   <button> <a href="#">Редактировать</a></button>
-    <td align = 'right'><a href="{% url 'delete_document' document.id %}">Удалить</a></td>
+
+    <td align = 'right'><button><a href="{% url 'delete_document' document.id %}">Удалить</a></button></td>
+
 
 </ul>
 </div>
