--- a/project/crm_app/templates/crm_app/extract.html
+++ b/project/crm_app/templates/crm_app/extract.html
@@ -8,5 +8,12 @@
 {% for o in obj_list %}
 <p>{{o}}</p>
 {% endfor %}
+
+{{sdelka}} --- best
+------------------------------------------------------------------------------------------------------------------
+{{sdelka}} | {{sdelka}}  |  {{sdelka}}   |  {{sdelka}}  |{{sdelka}} | {{sdelka}}  |  {{sdelka}}   |  {{sdelka}}  |
+---------------------------------------------------------------------------------------------------------------
+           |             |               |               |          |             |               |             |
+---------------------------------------------------------------------------------------------------------------
 </body>
 </html>
