--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -13,16 +13,15 @@
 <div class="centercontent"><ul>
 
 
-    <h3>от {{quotation.time_create}}</h3>
-    <li>_____________{{quotation.id}}_____________</li>
+    <h3>создана:  {{quotation.time_create}}</h3>
     <li>Описание потребности: {{quotation.description}}</li>
     <li>Транспорт: {{quotation.transport}}</li>
-    <li>{{quotation.client}} </li>
+    <li>Заказчик: {{quotation.client}} </li>
     <li>Место загрузки груза: {{quotation.loading_country}} </li>
     <li>Место выгрузки груза: {{quotation.unloading_country}} </li>
     <li>Ставка Перевозчика  -{{quotation.supplyer_1}} </li>
      <li>цена:  -{{quotation.sup_price_1}} {{quotation.currency1}}  </li>
-    <li>коммент  -{{quotation.comment_field1}} </li>
+    <li>комментарий: {{quotation.comment_field1}} </li>
 
     <li>Ставка Перевозчика 2 - {{quotation.supplyer_2}}
      <li>цена:  -{{quotation.sup_price_2}} {{quotation.currency2}}  </li>
