--- a/project/crm_app/templates/crm_app/update_sdelka.html
+++ b/project/crm_app/templates/crm_app/update_sdelka.html
@@ -27,10 +27,7 @@
     <div class="form-error">{{ form.common_transport.errors }}</div>
 
 
-
-
-
-
+    <!-- ПЕРЕВОЗЧИК 1 -->
 
 <h4>Перевозчик 1:</h4>
   <p><label for="{{ form.supplyer_1.id_for_label }}">{{ form.supplyer_1.label }}:</label>{{ form.supplyer_1 }}</p>
@@ -51,6 +48,9 @@
 
   <p><label for="{{ form.comment_field1.id_for_label }}">{{ form.comment_field1.label }}:</label>{{ form.comment_field1 }}</p>
     <div class="form-error">{{ form.comment_field1.errors }}</div>
+
+    <p><label for="{{ form.debitorka1.id_for_label }}">{{ form.debitorka1.label }}:</label>{{ form.debitorka1 }}</p>
+    <div class="form-error">{{ form.debitorka1.errors }}</div>
 
     <!-- перевозчики: 2, 3, 4 -->
     <ul class="tree">
@@ -74,7 +74,11 @@
       <li>
             <summary><label for="{{ form.comment_field2.id_for_label }}">{{ form.comment_field2.label }}:</label>{{ form.comment_field2 }}</summary>
             <div class="form-error">{{ form.comment_field2.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka2.id_for_label }}">{{ form.debitorka2.label }}:</label>{{ form.debitorka2 }}</p>
+    <div class="form-error">{{ form.debitorka2.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
    <ul class="tree">
@@ -98,7 +102,11 @@
       <li>
             <summary><label for="{{ form.comment_field3.id_for_label }}">{{ form.comment_field3.label }}:</label>{{ form.comment_field3 }}</summary>
             <div class="form-error">{{ form.comment_field3.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka3.id_for_label }}">{{ form.debitorka3.label }}:</label>{{ form.debitorka3 }}</p>
+    <div class="form-error">{{ form.debitorka3.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
     <ul class="tree">
@@ -122,7 +130,11 @@
       <li>
             <summary><label for="{{ form.comment_field4.id_for_label }}">{{ form.comment_field4.label }}:</label>{{ form.comment_field4 }}</summary>
             <div class="form-error">{{ form.comment_field4.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka4.id_for_label }}">{{ form.debitorka4.label }}:</label>{{ form.debitorka4 }}</p>
+    <div class="form-error">{{ form.debitorka4.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
 
@@ -148,7 +160,11 @@
       <li>
             <summary><label for="{{ form.comment_field5.id_for_label }}">{{ form.comment_field5.label }}:</label>{{ form.comment_field5 }}</summary>
             <div class="form-error">{{ form.comment_field5.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka5.id_for_label }}">{{ form.debitorka5.label }}:</label>{{ form.debitorka5 }}</p>
+    <div class="form-error">{{ form.debitorka5.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
 
@@ -173,7 +189,11 @@
       <li>
             <summary><label for="{{ form.comment_field6.id_for_label }}">{{ form.comment_field6.label }}:</label>{{ form.comment_field6 }}</summary>
             <div class="form-error">{{ form.comment_field6.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka6.id_for_label }}">{{ form.debitorka6.label }}:</label>{{ form.debitorka6 }}</p>
+    <div class="form-error">{{ form.debitorka6.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
     <ul class="tree">
@@ -197,7 +217,11 @@
       <li>
             <summary><label for="{{ form.comment_field7.id_for_label }}">{{ form.comment_field7.label }}:</label>{{ form.comment_field7 }}</summary>
             <div class="form-error">{{ form.comment_field7.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka7.id_for_label }}">{{ form.debitorka7.label }}:</label>{{ form.debitorka7 }}</p>
+    <div class="form-error">{{ form.debitorka7.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
     <ul class="tree">
@@ -221,7 +245,11 @@
       <li>
             <summary><label for="{{ form.comment_field8.id_for_label }}">{{ form.comment_field8.label }}:</label>{{ form.comment_field8 }}</summary>
             <div class="form-error">{{ form.comment_field8.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka8.id_for_label }}">{{ form.debitorka8.label }}:</label>{{ form.debitorka8 }}</p>
+    <div class="form-error">{{ form.debitorka8.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
     <ul class="tree">
@@ -245,7 +273,11 @@
       <li>
             <summary><label for="{{ form.comment_field9.id_for_label }}">{{ form.comment_field9.label }}:</label>{{ form.comment_field9 }}</summary>
             <div class="form-error">{{ form.comment_field9.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka9.id_for_label }}">{{ form.debitorka9.label }}:</label>{{ form.debitorka9 }}</p>
+    <div class="form-error">{{ form.debitorka9.errors }}</div>
+
+        </ul>
       </details></li></ul>
 
     <ul class="tree">
@@ -270,7 +302,11 @@
       <li>
             <summary><label for="{{ form.comment_field10.id_for_label }}">{{ form.comment_field10.label }}:</label>{{ form.comment_field10 }}</summary>
             <div class="form-error">{{ form.comment_field10.errors }}</div>
-      </li></ul>
+      </li>
+        <p><label for="{{ form.debitorka10.id_for_label }}">{{ form.debitorka10.label }}:</label>{{ form.debitorka10 }}</p>
+    <div class="form-error">{{ form.debitorka10.errors }}</div>
+
+        </ul>
       </details></li></ul>
     <!-- ставки 2, 3, 4 - конец -->
 
