--- a/project/crm_app/templates/crm_app/clients_docs.html
+++ b/project/crm_app/templates/crm_app/clients_docs.html
@@ -45,38 +45,35 @@
 </div>
 
 <div class="centercontent">
-
+<button class="addbutton"><a href="{% url 'document_itself' %}">Загрузить новый документ </a></button>
     {% if title2 %}
         <h2> {{title}}--> {{title2}}:</h2>
     {% else %}
     <h2>  </h2>
     {% endif %}
-
-
     {% for c in documents %}
         {% if c.len > 0 %}
-        <h3>{{c.name}}</h3>
-    <ul>{% if c.client%}
+
+        <h3>Название документа: {{c.name}}</h3>
+        <ul>
+
+            {% if c.client%}
         <li><b>Документ от Заказчика: </b>{{c.client}}</li>
-<p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
-
-        {% elif c.supplyer%}
+            {% elif c.supplyer%}
         <li><b>Документ от Перевозчикаа: </b>{{c.supplyert}}</li>
-        <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
-        {% elif c.other_organization%}
+             {% elif c.other_organization%}
         <li><b>Документ от сторонней организации: </b>{{c.other_company}}</li>
-        <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
-        {%  else %}
-        <li><b>Корпоративный Документ </b></li>
-        <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+             {% else %}
+        <li><b>Корпоративный Документ: </b></li>
        {%endif%}
-
-         <li>Тип документа: {{c.type}}</li>
-         {% if c.file %}
+            <li>Тип документа: {{c.type}}</li>
+             {% if c.file %}
          <a href="{{c.file.url}}">{{c.file}}</a>
-        {%else%}
+                 {%else%}
         <p>no file</p>
-        {% endif %}
+            {% endif %}
+            <p><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+
     </ul>
      {%endif%}
     {% endfor %}
@@ -84,15 +81,7 @@
     <hr>
     <br><br>
 
-<h2>Загрузить новый документ</h2>
 
-    <form action="{% url 'documents' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <p>
-            {{ form.file}}
-        </p>
-        <p><input type="submit" value="загрузить файл" /></p>
-    </form>
 
 </div>
 {%endblock content%}
