--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="centercontent"><ul>
-
+<button class="addbutton"><a href="{% url 'extract' sdelka.id %}">Подготовить выписку</a></button>
 
 
 
@@ -19,6 +19,7 @@
 
 
     <li>от {{sdelka.time_create}}</li>
+    <li>id---{{sdelka.id}}</li>
     <li>Описание потребности: {{sdelka.description}}</li>
     <li>Заказчик: {{sdelka.client}}</li>
     <li>Транспорт: {{sdelka.common_transport}} </li>
@@ -34,7 +35,11 @@
     <li>Место разгрузки: {{sdelka.unloading_country_1}}</li>
     <li> Дата загрузки: {{sdelka.data_zagruzki_1}}</li>
     <li>Дата выгрузки: {{sdelka.data_vygruzki_1}}</li>
-    <li>Дебиторка: {{sdelka.debitorka1}}</li>
+    {% if  sdelka.debitorka1 == True  %}
+    <li>Дебиторка: ✅</li>
+    {% else %}
+     <li>Дебиторка: ❌ </li>
+    {% endif %}
     <br>
     <hr>
 
@@ -49,10 +54,14 @@
     <li>Место разгрузки: {{sdelka.unloading_country_2}}</li>
     <li>Дата загрузки: {{sdelka.data_zagruzki_2}}</li>
     <li>Дата выгрузки: {{sdelka.data_vygruzki_2}}</li>
-    <li>Дебиторка: {{sdelka.debitorka2}}</li>
+    {% if  sdelka.debitorka2 == True  %}
+    <li>Дебиторка: ✅</li>
+    {% else %}
+     <li>Дебиторка: ❌ </li>
+    {% endif %}
     <hr>
     {%else%}
-    <p>------no supplyer 2-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_3 %}
@@ -68,7 +77,7 @@
     <li>Дебиторка: {{sdelka.debitorka3}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 3-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_4 %}
@@ -84,7 +93,7 @@
     <li>Дебиторка: {{sdelka.debitorka4}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 4-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_5 %}
@@ -100,7 +109,7 @@
     <li>Дебиторка: {{sdelka.debitorka5}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 5-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_6 %}
@@ -116,7 +125,7 @@
     <li>Дебиторка: {{sdelka.debitorka6}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 6-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_7 %}
@@ -132,7 +141,7 @@
     <li>Дебиторка: {{sdelka.debitorka7}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 7-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_8 %}
@@ -148,7 +157,7 @@
     <li>Дебиторка: {{sdelka.debitorka8}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 8-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_9 %}
@@ -164,8 +173,7 @@
     <li>Дебиторка: {{sdelka.debitorka9}}</li>
     <hr>
     {%else%}
-
-    <p>------no supplyer 9-------</p>
+    <p></p>
     {% endif %}
 
      {% if sdelka.supplyer_10 %}
@@ -181,7 +189,7 @@
     <li>Дебиторка: {{sdelka.debitorka10}}</li>
     <hr>
     {%else%}
-    <p>------no supplyer 10-------</p>
+    <p></p>
     {% endif %}
 <hr>
 <h3>Документы в сделке:</h3>
@@ -197,7 +205,7 @@
 
     {% endif %}
  <a href="{% url 'document_sdelka_supplyer' sdelka.id%}"><button>Загрузить новый документ от Перевозчика</button></a>
-<a href="{% url 'document_sdelka_client' sdelka.id %}"><button>Загрузить новый документ от Заказчика</button></a>
+    <a href="{% url 'document_sdelka_client' sdelka.id %}"><button>Загрузить новый документ от Заказчика</button></a>
 
 <br><br>
 
