--- a/project/crm_app/templates/crm_app/supplyers.html
+++ b/project/crm_app/templates/crm_app/supplyers.html
@@ -83,12 +83,17 @@
     <li>{{c.id}}</li>
     <li>time_create:  {{c.time_create}}</li>
     <li>{{c.contact_name}}</li>
-     <li>Надежный: {{c.supplyer_status}}</li>
-    <li>{{c.email}} </li>
-    <li>{{c.phone}}</li>
-    <li>{{c.address}} </li>
-    <li>{{c.created}} </li>
-    <li>{{c.updated}} </li>
+
+    <li>email: {{c.email}} </li>
+    <li>тел.: {{c.phone}}</li>
+    <li>адрес: {{c.address}} </li>
+    <li>создан: {{c.time_create}} </li>
+    <li>последнеее обновление: {{c.time_create}} </li>
+
+{% if  c.supplyer_status == True%}
+            <li>Надежный перевозчик: ✔️ </li>
+{% endif  %}
+
 <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 </ul>
