--- a/project/crm_app/templates/crm_app/update_supplyer.html
+++ b/project/crm_app/templates/crm_app/update_supplyer.html
@@ -5,7 +5,7 @@
 </ul>
 </div>
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
      <div class="form-error">{{ form.non_field_errors }}</div>
 
