--- a/project/crm_app/templates/crm_app/operations.html
+++ b/project/crm_app/templates/crm_app/operations.html
@@ -17,7 +17,8 @@
 </div>
 
 <div class="centercontent">
-
+<button class=""><a href="{% url 'dinamic_file_all_sdelki' %}">dinamic выпискa</a></button>
+    <br>
     {{euro}}
     название: {{euro_insdelka}}
     всего ={{euro_insdelka.count}} сделка(-ок)
