--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="centercontent"><ul>
-<button class="addbutton"><a href="{% url 'extract' sdelka.id %}">Подготовить выписку</a></button>
+<button class="addbutton"><a href="{% url 'extract' 3 %}">Подготовить выписку</a></button>
 
 
 
