--- a/project/crm_app/templates/crm_app/sdelki.html
+++ b/project/crm_app/templates/crm_app/sdelki.html
@@ -21,11 +21,15 @@
    <button class="addbutton"><a href="{% url 'add_sdelka' %}">Добавить Сделку</a></button>
 
 
+
+
+
     {% for msg in messages %}
     <div class="success">{{msg}}</div>
     {% endfor %}
 
       <br>
+
 
 <div class="poisk_table">
 
@@ -51,7 +55,7 @@
 
      <h4>Поиск по дате создания:</h4>
 
-     <a href="{% url 'sdelki_search' %}"><button>Первый/последний</button></a>
+
 
     <a href="{% url 'sdelki_filter' pk=1 %}"><button>Неделя</button></a>
     <a href="{% url 'sdelki_filter' pk=3 %}"><button>Квартал</button></a>
@@ -62,18 +66,26 @@
 
     <hr>
 <h2>{{title2}}</h2>
+    {% if not selected %}
+    <h3 class="choicetitle"> Сделки за весь период</h3>
+     <button class="addbutton"><a href="{% url 'dinamic_file_all_sdelki' %}">Подготовить выписку</a></button>
+    {% endif %}
+
         {% for s in selectings%}
          {% if s.selected == selected %}
         {% if selected == 3%}
+
         <h3 class="choicetitle"> Сделки за период: с
             {{period_quartal}} по {{now_str}}</h3>
+    <button class="addbutton"><a href="{% url 'dinamic_file_quartal_sdelki' %}">Подготовить выписку за квартал</a></button>
         {% elif selected == 6%}
+
         <h3 class="choicetitle"> Сделки за период: с
             {{six_month}} по {{now_str}}</h3>
-
+<button class="addbutton"><a href="{% url 'dinamic_file_six_sdelki' %}">Подготовить выписку за полгода</a></button>
          {% else %}
         <h3 class="choicetitle"> Сделки за неделю: </h3>
-
+<button class="addbutton"><a href="{% url 'dinamic_file_week_sdelki' %}">Подготовить выписку за 7 дней</a></button>
         {% endif %}
         {% endif %}
         {% endfor %}
