--- a/project/crm_app/templates/crm_app/sdelki_for_period.html
+++ b/project/crm_app/templates/crm_app/sdelki_for_period.html
@@ -12,8 +12,9 @@
 
 </div>
 
-<div class="centercontent"><ul>
+<div class="centercontent">
     <button class="addbutton"><a href="{% url 'add_client' %}">Добавить Заказчика</a></button>
+    <button class=""><a href="{% url 'dinamic_file_all_sdelki' %}">Выпискa</a></button>
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
     {% endfor %}
@@ -22,9 +23,9 @@
 
 <ul>
 
-    <h4>Заказчики за период:</h4>
-    <h3 class="choicetitle">с: {{fromdate}} по: {{todate}}</h3>
-{% for r in result %}
+
+    <h3 class="choicetitle">Заказчики за период с: {{fromdate}} по: {{todate}}</h3>
+{% for r in sdelki %}
      <li> {{r.client}} </li>
    <li>создан:  {{r.time_create}} </li>
     <li>{{r.description}} </li>
