--- a/project/crm_app/templates/crm_app/sdelki_search.html
+++ b/project/crm_app/templates/crm_app/sdelki_search.html
@@ -10,6 +10,7 @@
 
 <div class="centercontent"><ul>
     <button class="addbutton"><a href="{% url 'add_sdelka' %}">Добавить Сделку</a></button>
+    <button class=""><a href="{% url 'extract' 2 %}">Подготовить выписку</a></button>
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
     {% endfor %}
