--- a/project/crm_app/templates/crm_app/sdelki_for_period.html
+++ b/project/crm_app/templates/crm_app/sdelki_for_period.html
@@ -20,7 +20,7 @@
     {% endfor %}
 
 
-
+{{fromdate}}    -> {{todate}} = {{day}}---{{plus1}} {{now}}===={{sdelka_last}}
 <ul>
 
 
@@ -32,8 +32,8 @@
     <p ><a class="double-border-button" href="{{ r.get_absolute_url }}">Посмотреть подробней</a></p>
     <hr>
 {%endfor%}
-
 </ul>
+
 </ul>
 </div>
 {%endblock content%}
