--- a/project/crm_app/templates/crm_app/sdelki_for_period.html
+++ b/project/crm_app/templates/crm_app/sdelki_for_period.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="centercontent">
-    <button class="addbutton"><a href="{% url 'add_client' %}">Добавить Заказчика</a></button>
+    <button class="addbutton"><a href="{% url 'add_sdelka' %}">Добавить Сделку</a></button>
     <button class=""><a href="{% url 'dinamic_file_all_sdelki' %}">Выпискa</a></button>
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
