--- a/project/crm_app/templates/crm_app/clients_for_period.html
+++ b/project/crm_app/templates/crm_app/clients_for_period.html
@@ -22,10 +22,7 @@
 
 <ul>
 
-
-
-    <h4>Заказчики за период:</h4>
-    <h3 class="choicetitle">с: {{fromdate}} по: {{todate}}</h3>
+    <h3 class="choicetitle">Заказчики за период с: {{fromdate}} по: {{todate}}</h3>
 {% for r in clients %}
      <li> {{r.company_name}} </li>
    <li>создан:  {{r.time_create}} </li>
