--- a/project/crm_app/templates/crm_app/quotations_for_period.html
+++ b/project/crm_app/templates/crm_app/quotations_for_period.html
@@ -12,18 +12,18 @@
 
 </div>
 
-<div class="centercontent"><ul>
+<div class="centercontent">
+
+
+    <ul>
     <button class="addbutton"><a href="{% url 'add_quotation' %}">Добавить Котировку</a></button>
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
     {% endfor %}
 
-
-
 <ul>
+<h3 class="choicetitle">Котировки за период с: {{fromdate}} по: {{todate}}</h3>
 
-    <h4>Котировки за период:</h4>
-    <h3 class="choicetitle">с: {{fromdate}} по: {{todate}}</h3>
 {% for c in result %}
 
     <h3>{{c.client}}</h3>
