--- a/project/crm_app/templates/crm_app/sdelki_for_period.html
+++ b/project/crm_app/templates/crm_app/sdelki_for_period.html
@@ -14,24 +14,28 @@
 
 <div class="centercontent">
     <button class="addbutton"><a href="{% url 'add_sdelka' %}">Добавить Сделку</a></button>
-    <button class=""><a href="{% url 'dinamic_file_all_sdelki' %}">Выпискa</a></button>
+    <button class=""><a href="{% url 'calendar_filter' %}">Выпискa</a></button>
+
+
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
-    {% endfor %}
+    {% endfor %}<br>
 
 
-{{fromdate}}    -> {{todate}} = {{day}}---{{plus1}} {{now}}===={{sdelka_last}}
+
+
 <ul>
-
-
-    <h3 class="choicetitle">Заказчики за период с: {{fromdate}} по: {{todate}}</h3>
+    <h3 class="choicetitle">Сделки за период с: {{fromdate}} по: {{todate}}</h3>
 {% for r in sdelki %}
+    <li> {{r.number}} </li>
      <li> {{r.client}} </li>
    <li>создан:  {{r.time_create}} </li>
     <li>{{r.description}} </li>
     <p ><a class="double-border-button" href="{{ r.get_absolute_url }}">Посмотреть подробней</a></p>
     <hr>
 {%endfor%}
+
+    {%for p in period%} <p>id: {{p.pk}};  period: {{p}}</p> {%endfor%}
 </ul>
 
 </ul>
