--- a/project/crm_app/templates/crm_app/index.html
+++ b/project/crm_app/templates/crm_app/index.html
@@ -14,7 +14,7 @@
     {{cal|safe}}
     <br><br><br>
     {{time}}
-
+{{cur}}
     <br><br><br>
     <h3>клиенты за этот год ({{now.year}}):</h3>
     {% if client_search_year %}
