--- a/project/crm_app/templates/crm_app/sdelki.html
+++ b/project/crm_app/templates/crm_app/sdelki.html
@@ -74,7 +74,9 @@
 <h2>{{title2}}</h2>
     {% if not selected %}
     <h3 class="choicetitle"> Сделки за весь период</h3>
-     <button class="addbutton"><a href="{% url 'dinamic_file_all_sdelki' %}">Подготовить выписку</a></button>
+    <a class="addbutton" href="{% url 'dinamic_file_all_sdelki' %}">
+        <button class="custom-btn btn-7"> <span>Сделать выписку</span></button></a>
+
     {% endif %}
 
         {% for s in selectings%}
@@ -83,15 +85,19 @@
 
         <h3 class="choicetitle"> Сделки за период: с
             {{period_quartal}} по {{now_str}}</h3>
-    <button class="addbutton"><a href="{% url 'dinamic_file_quartal_sdelki' %}">Подготовить выписку за квартал</a></button>
+   <a class="addbutton" href="{% url 'dinamic_file_quartal_sdelki' %}"><button class="custom-btn btn-7"><span>
+       Сделать выписку</span></button></a>
         {% elif selected == 6%}
 
         <h3 class="choicetitle"> Сделки за период: с
             {{six_month}} по {{now_str}}</h3>
-<button class="addbutton"><a href="{% url 'dinamic_file_six_sdelki' %}">Подготовить выписку за полгода</a></button>
+<a class="addbutton" href="{% url 'dinamic_file_six_sdelki' %}"><button class="custom-btn btn-7"><span>
+       Сделать выписку</span></button></a>
          {% else %}
         <h3 class="choicetitle"> Сделки за неделю: </h3>
-<button class="addbutton"><a href="{% url 'dinamic_file_week_sdelki' %}">Подготовить выписку за 7 дней</a></button>
+    <a class="addbutton" href="{% url 'dinamic_file_week_sdelki' %}"><button class="custom-btn btn-7"><span>
+       Сделать выписку</span></button></a>
+
         {% endif %}
         {% endif %}
         {% endfor %}
