--- a/project/crm_app/templates/crm_app/base.html
+++ b/project/crm_app/templates/crm_app/base.html
@@ -18,8 +18,12 @@
     <li class="logo"><a href="{% url 'home' %}"> <img src="{% static 'crm_app/images/logo.png' %}" alt=""> </a></li>
     {% for m in menu %}
     <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-
     {% endfor %}
+    {% if request.user.is_authenticated %}
+    <div class="last">{{user.username}} <b>|</b> <a href="{% url 'logout' %}"> Выйти </a></div>
+    {% else %}
+   <div class="last"> <a href="{% url 'register' %}"> Регистрация </a><b>|</b><a href="{% url 'login' %}"> Войти</a></div>
+    {% endif %}
 </ul>
 </div>
 
