--- a/project/crm_app/templates/crm_app/register.html
+++ b/project/crm_app/templates/crm_app/register.html
@@ -15,7 +15,8 @@
     <p><label for="{{ f.id_for_label }}">{{ f.label }}:</label>{{ f }}</p>
     <div class="form-error">{{ f.errors }}</div>
     {% endfor %}
-<button type="submit">Войти</button>
+
+<button type="submit">Регистрация</button>
 </form>
 
 {% endblock content%}
