--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -18,8 +18,8 @@
 <div class="borders">
 
 
-    <li>от {{sdelka.time_create}}</li>
-    <li>id---{{sdelka.id}}</li>
+    <h3>Создана: {{sdelka.time_create}}</h3>
+
     <li>Описание потребности: {{sdelka.description}}</li>
     <li>Заказчик: {{sdelka.client}}</li>
     <li>Транспорт: {{sdelka.common_transport}} </li>
@@ -209,10 +209,10 @@
 
 <br><br>
 
-    <li>Статус Сделки:  - {{sdelka.status_sdelka}}  </li>
+    <li>Статус Сделки: {{sdelka.status_sdelka}}  </li>
     <li>Статус состояния: {{sdelka.status_sdelka_other}} </li>
 
-    <li>Посмотреть профит: {{sdelka.profit}}</li>
+
 </div>
 
     <br>
