--- a/project/crm_app/templates/crm_app/supplyer.html
+++ b/project/crm_app/templates/crm_app/supplyer.html
@@ -20,7 +20,7 @@
     <li>Телефон:{{supplyer.phone}}</li>
     <li>Адрес: {{supplyer.address}} </li>
 
-    <li>{{supplyer.created}} </li>
+    <li>{{supplyer.time_create}} </li>
         {% if  supplyer.supplyer_status == True%}
         <li>Надежный перевозчик: ✔️ </li>
         {% else %}
