--- a/project/crm_app/templates/crm_app/update_sdelka.html
+++ b/project/crm_app/templates/crm_app/update_sdelka.html
@@ -107,7 +107,9 @@
     <div class="form-error">{{ form.debitorka3.errors }}</div>
 
         </ul>
-      </details></li></ul>
+      </details></li>
+
+    </ul>
 
     <ul class="tree">
       <li><details><summary> Перевозчик 4: </summary>
