--- a/project/crm_app/templates/crm_app/clients.html
+++ b/project/crm_app/templates/crm_app/clients.html
@@ -77,15 +77,21 @@
         {% endfor %}
     <ul>
     {% for c in clients %}
-        <h3>{{c.company_name}}</h3>
-        <li>{{c.id}}</li>
-    <li>{{c.contact_name}}</li>
-    <li>{{c.email}} </li>
-    <li>{{c.phone}}</li>
-    <li>{{c.address}} </li>
-    <li>{{c.created}} </li>
-    <li>{{c.updated}} </li>
-         <li>Постоянный клиент: {{c.client_status}}</li>
+        <h3>Название: {{c.company_name}}</h3>
+
+    <li>Имя контакта: {{c.contact_name}}</li>
+    <li>email: {{c.email}} </li>
+    <li>Тел.: {{c.phone}}</li>
+    <li>Адрес: {{c.address}} </li>
+    <li>Дата создания: {{c.time_create}} </li>
+    <li>Дата последнего обновления: {{c.time_update}} </li>
+
+        {% if  c.client_status == True%}
+            <li>Постоянный клиент: ✔️ </li>
+        {% endif  %}
+
+
+
 <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 
