--- a/project/crm_app/templates/crm_app/other_companies.html
+++ b/project/crm_app/templates/crm_app/other_companies.html
@@ -24,13 +24,17 @@
     {% endfor %}
 
     {% for c in other_companies %}
-        <h3>{{c.company_name}}</h3>
-    <li>{{c.descripsion}}</li>
-    <li>{{c.email}} </li>
-    <li>{{c.phone}}</li>
-    <li>{{c.address}} </li>
-    <li>{{c.created}} </li>
-    <li>{{c.updated}} </li>
+
+
+
+
+        <h3>Название: {{c.company_name}}</h3>
+    <li>Описание: {{c.descripsion}}</li>
+    <li>email:{{c.email}} </li>
+    <li>Тел.:{{c.phone}}</li>
+    <li>Адрес:{{c.address}} </li>
+    <li>Дата создания:{{c.created}} </li>
+
 <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 </ul>
